# computer-graphics

./: .gitignore  README.md
cmu_15-462_662/: README.md
cos-cuatro-dos-seis/: README.md
geometry-processing/: 01-shape-representation.md  README.md
learn-opengl/: .gitignore  README.md
ray-tracing-in-one-weekend/: .gitignore  README-ray-tracing-the-next-week.md  README.md
ray-tracing-in-one-weekend/01-ray-tracing-in-one-weekend/: .gitignore  CMakeLists.txt  README.md  negative_pixel_values.py  refraction_transmitted_ray_derivation.md
ray-tracing-in-one-weekend/01-ray-tracing-in-one-weekend/images/: cover-attempt.ppm  forgot-set-scatter-ray.ppm  indices-refraction.ppm  lookat-metal-sphere.ppm  metal-sphere-focused.ppm  negative-vup.ppm  negative_pixel_values_two_channels.ppm  negative_values.ppm  schwarz.ppm  smash_ball.ppm  try-purple.ppm  vfov-10.ppm  vfov-125.ppm  vfov-180.ppm  view-from-right-side.ppm
ray-tracing-in-one-weekend/01-ray-tracing-in-one-weekend/include/: camera.h  color.h  hittable.h  hittable_list.h  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
ray-tracing-in-one-weekend/01-ray-tracing-in-one-weekend/src/: main.cpp
reading/: README.md
scratch-a-pixel/: README.md
tinyrenderer/: .gitignore  Makefile  README.md  geometry.h  lesson-1-bresenham-line-drawing-algorithm.md  lesson-2-triangle-rasterization.md  lesson-3-hidden-faces-removal-z-buffer.md  lesson-4-perspective-projection.md  main  main.cpp  model.h  output.tga  run.sh  tinyrenderer.cpp  tinyrenderer.h
vulkan-tutorial/: README.md
web-pintura/: README.md
(+154 files in other folders)
